# pico-projects

./: .gitmodules  README.md  build.sh  setup_pico_sdk.sh
TO_SORT/PiPico/MicroPython/: blink.py  rp2-pico-20211002-unstable-v1.17-74-gd42cba0d2.uf2
TO_SORT/pi-pico-hid/: keyboard_test.py  mode_select.py
adxl343_i2c/: CMakeLists.txt  main.c
adxl343_spi/: CMakeLists.txt  main.c
blink/: CMakeLists.txt  main.c
blink_w/: CMakeLists.txt  main.c
circuitpython/pico_hid/: atari2usb.py  gamepad_test.py
emu1351/: CMakeLists.txt  README.md  main.c  tusb_config.h
firmware/circuitpython/: adafruit-circuitpython-raspberry_pi_pico-en_US-9.0.4.uf2
hid-test/: CMakeLists.txt  README.md
hid-test/.github/: copilot-instructions.md
hid-test/src/: gpio_buttons.cpp  gpio_buttons.h  hid_keyboard.cpp  hid_keyboard.h  hid_keys.h  main.cpp  tusb_config.h  usb_descriptors.c
sd_fat_spi/: CMakeLists.txt  main.c
